--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -5,7 +5,20 @@ body {
     font-family: arial, sans-serif;
 }
 
-#main, #chats {
+#main {
+    position: relative;
+    display: table;
+    width: 100%;
+    height: 300px;
+    padding-bottom: 48px;
+    margin-bottom: 0;
+    text-align: center;
+    background-size: cover;
+    border: 0;
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/a/ab/Patates.jpg");
+}
+
+#chats {
     width: 500px;
     margin: auto;
     text-align: left;
@@ -20,6 +33,7 @@ body {
     font-size: 35px;
     margin-bottom: 5px;
     padding: 5px;
+    color: white;
 }
 
 #main h1 span {
@@ -60,17 +74,35 @@ form input[type=text] {
 }
 
 .chat {
-    padding: 5px;
-    margin-bottom: 5px;
-    background-color: #eee;
+    border: 1px dotted black;
+    /*padding: 10px 10px 2px 10px;*/
+    margin: 5px;
+    font-family: sans-serif;
+    position: relative;
+    padding: 10px 15px;
+    background-color: #f5f8fa;
+    border-radius: 9px;
+    overflow: hidden;
 }
 
-.chat .username {
-    
+.chat img {
+    max-height: 100px;
+    width: auto;
+}
+
+.text, .room, .username {
+    max-height: 200px;
+    overflow: hidden;
 }
 
 .friend {
     font-weight: 800;
+}
+
+.date, .room {
+    font-size: 66%;
+    font-weight: 200;
+    color: grey;
 }
 
 .chat:hover {
@@ -88,7 +120,31 @@ form input[type=text] {
 }
 
 .friend {
-    color: #fff;
-    background-color: #0090da;
+    color: red;
+    /*background-color: #0090da;*/
 }
 
+#message {
+    /*height: 200px;*/
+    width: 400px;
+    
+}
+
+.submit {
+    border: 1px solid black;
+    border-radius: 0px;
+}
+#roomSelect {
+    left: 0;
+    z-index: 1000;
+    margin: 10px 0 0 2px;
+    list-style: none;
+    font-size: 14px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, .05);
+    border-radius: 4px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+    background-clip: padding-box;
+    float: right;
+}
